--- a/10_lesson/contact.html
+++ b/10_lesson/contact.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="Author" content="Pushkar Priyadarshi" />
+    <meta name="description" content="Contact info for the Little Taco Shop." />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - Taco Shop</title>
@@ -8,71 +11,83 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <h1>Contact Us</h1>
-    <nav aria-label="contact-navigation">
-      <ul>
-        <li><a href="index.html" target="_self">Home</a></li>
-        <li>
-          <a href="index.html#about-LTS" target="_self">About LTS</a>
-        </li>
-        <li><a href="index.html#menu" target="_self">Our Menu</a></li>
-        <li><a href="hours.html" target="_self">Store Hours</a></li>
-      </ul>
-    </nav>
-    <figure>
-      <img
-        src="img/tacos_close_up_400x260.png"
-        alt="Tacos Close Up"
-        title="close up of Tacos"
-        height="260"
-        width="400"
-      />
-      <figcaption>Little Taco Shop Tacos</figcaption>
-    </figure>
-    <h2>Our Contact Form</h2>
-    <form action="https://httpbin.org/get" method="get">
-      <fieldset>
-        <legend>Send us a Message</legend>
-        <label for="name">Name:</label>
-        <input
-          type="text"
-          id="name"
-          placeholder="your name"
-          required
-          autofocus
-          name="user's name"
+    <header>
+      <h1>Contact Us</h1>
+      <nav aria-label="contact-navigation">
+        <ul>
+          <li><a href="index.html" target="_self">Home</a></li>
+          <li>
+            <a href="index.html#about-LTS" target="_self">About LTS</a>
+          </li>
+          <li><a href="index.html#menu" target="_self">Our Menu</a></li>
+          <li><a href="hours.html" target="_self">Store Hours</a></li>
+        </ul>
+      </nav>
+      <figure>
+        <img
+          src="img/tacos_close_up_400x260.png"
+          alt="Tacos Close Up"
+          title="close up of Tacos"
+          height="260"
+          width="400"
         />
-        <br /><br />
-        <label for="mail">Email:</label>
-        <input
-          type="text"
-          id="mail"
-          placeholder="your email"
-          required
-          pattern="[a-zA-z0-9_%.+-]+@[a-zA-z0-9_.-]+\.[a-zA-z]{2,}"
-          name="mail"
-        />
-        <br /><br />
-        <label for="message">Your Message:</label>
-        <br />
-        <textarea
-          id="message"
-          placeholder="Type your message here"
-          required
-          cols="30"
-          rows="10"
-          name="message"
-        ></textarea>
-      </fieldset>
-      <button type="submit">Submit</button>
-      <button type="reset">Reset</button>
-    </form>
-    <h2>Our Location</h2>
-    <address>
-      <p>555 Taco Temptation Lane, Suite T <br />Kanas City, MO 55555-5555</p>
+        <figcaption>Little Taco Shop Tacos</figcaption>
+      </figure>
+    </header>
+    <main>
+      <article aria-label="contact">
+        <section aria-label="form">
+          <h2>Our Contact Form</h2>
+          <form action="https://httpbin.org/get" method="get">
+            <fieldset>
+              <legend>Send us a Message</legend>
+              <label for="name">Name:</label>
+              <input
+                type="text"
+                id="name"
+                placeholder="your name"
+                required
+                autofocus
+                name="user's name"
+              />
+              <br /><br />
+              <label for="mail">Email:</label>
+              <input
+                type="text"
+                id="mail"
+                placeholder="your email"
+                required
+                pattern="[a-zA-z0-9_%.+-]+@[a-zA-z0-9_.-]+\.[a-zA-z]{2,}"
+                name="mail"
+              />
+              <br /><br />
+              <label for="message">Your Message:</label>
+              <br />
+              <textarea
+                id="message"
+                placeholder="Type your message here"
+                required
+                cols="30"
+                rows="10"
+                name="message"
+              ></textarea>
+            </fieldset>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
+          </form>
+        </section>
+        <section aria-label="address">
+          <h2>Our Location</h2>
+          <address>
+            <p>
+              555 Taco Temptation Lane, Suite T <br />Kanas City, MO 55555-5555
+            </p>
 
-      <p>Phone: <a href="tel:+555-555-5555">555-555-5555</a></p>
-    </address>
+            <p>Phone: <a href="tel:+555-555-5555">555-555-5555</a></p>
+          </address>
+        </section>
+      </article>
+    </main>
     <footer>
       <p><a href="#">Back to Top</a></p>
       <hr />
