spelling mistakes fixed

--- a/10_lesson/index.html
+++ b/10_lesson/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="Author" content="Pushkar Priyadarshi" />
-    <meta name="description" content="The Litle Taco Shop Main Site." />
+    <meta name="description" content="The Little Taco Shop Main Site." />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
